--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html lang="ru">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <title>Bella Italia</title>
+    <link rel="stylesheet" href="assets/css/bootstrap/css/bootstrap-reboot.min.css" />
+    <link rel="stylesheet" href="assets/css/bootstrap/css/bootstrap-grid.min.css" />
+    <link rel="stylesheet" href="assets/css/bootstrap/css/bootstrap.min.css" />
 </head>
 
 <body>
 
+    <script src="assets/js/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
