adaptive and js

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="top-nav" role="menu">
         <div class="nav-bg"></div>
         <div class="container nav-container">
-            <a href="#" class="logo" role="link">
+            <a href="/" class="logo" role="link">
                 <img src="assets/img/logo.png" alt="Bella Italia" />
             </a>
 
@@ -23,27 +23,43 @@
                 <span></span>
             </button>
         </div>
+
+        <div class="nav-overlay">
+            <ul class="top-menu">
+                <li><a href="#about" class="nav-link active">О нас</a></li>
+                <li><a href="#youcan" class="nav-link">Благодаря итальянскому вы сможете</a></li>
+                <li><a href="#success" class="nav-link">Три составляющие успеха курса</a></li>
+                <li><a href="#advantages" class="nav-link">Преимущества изучения итальянского с Bella Italia</a></li>
+                <li><a href="#learning" class="nav-link">Как строится процесс обучения?</a></li>
+                <li><a href="#teachers" class="nav-link">Преподаватели курса</a></li>
+                <li><a href="#feedback" class="nav-link">Отзывы о центре</a></li>
+                <li><a href="#plan" class="nav-link">Программа курсов А1 и А2</a></li>
+                <li><a href="#bonuses" class="nav-link">Бонусы курса</a></li>
+                <li><a href="#variants" class="nav-link">вариант участия</a></li>
+                <li><a href="#faq" class="nav-link">Ответы на самые частые вопросы</a></li>
+            </ul>
+        </div>
     </nav>
 
     <header class="header" style="background-image: url('assets/img/IMG_0230.JPG');">
-        <div class="overlay">
-            <div class="container">
-                <div class="content">
-                    <h1 class="page-title" role="heading">Разговорный итальянский за 90 дней!</h1>
-                    <p class="page-desc">Освойте базовую грамматику, выучите минимум 865 слов и трансформируйте эти
-                        знания в
-                        разговорный навык за 90 дней.</p>
-                    <div class="buttons-group">
-                        <a href="#" class="button primary" role="button">Старт А1 — 30 октября</a>
-                        <a href="#" class="button secondary" role="button">Старт А2 - декабрь 2020</a>
-                    </div>
+        <div class="overlay"></div>
+        <div class="container">
+            <div class="content">
+                <h1 class="page-title" role="heading">Разговорный итальянский за 90 дней!</h1>
+                <p class="page-desc">Освойте базовую грамматику, выучите минимум 865 слов и трансформируйте эти
+                    знания в
+                    разговорный навык за 90 дней.</p>
+                <div class="buttons-group">
+                    <a href="#" class="button primary" role="button">Старт А1 — 30 октября</a>
+                    <a href="#" class="button secondary" role="button">Старт А2 - декабрь 2020</a>
                 </div>
             </div>
         </div>
+
     </header>
 
     <main role="main">
-        <section class="section about">
+        <section id="about" class="section about">
             <div class="container">
                 <img src="assets/img/IMG_60482.jpg" alt="" class="about-image">
                 <div class="content">
@@ -72,7 +88,7 @@
             </div>
         </section>
 
-        <section class="section youcan gray">
+        <section id="youcan" class="section youcan gray">
             <div class="container">
                 <div class="content">
                     <div class="section-header">
@@ -123,7 +139,7 @@
             </div>
         </section>
 
-        <section class="section success red">
+        <section id="success" class="section success red">
             <div class="container">
                 <div class="content">
                     <div class="section-header">
@@ -172,7 +188,7 @@
             </div>
         </section>
 
-        <section class="section advantages">
+        <section id="advantages" class="section advantages">
             <div class="container">
                 <div class="content">
                     <div class="section-header">
@@ -249,7 +265,8 @@
             </div>
         </section>
 
-        <section class="section learning image overlayed" style="background-image: url('assets/img/IMG_1853.JPG');">
+        <section id="learning" class="section learning image overlayed"
+            style="background-image: url('assets/img/IMG_1853.JPG');">
             <div class="overlay"></div>
             <div class="container">
                 <div class="content">
@@ -295,7 +312,7 @@
             </div>
         </section>
 
-        <section class="section teachers">
+        <section id="teachers" class="section teachers">
             <div class="container">
                 <div class="content">
                     <div class="section-header">
@@ -336,7 +353,7 @@
             </div>
         </section>
 
-        <section class="section feedback gray">
+        <section id="feedback" class="section feedback gray">
             <div class="container">
                 <div class="content">
                     <div class="section-header">
@@ -517,7 +534,7 @@
             </div>
         </section>
 
-        <section class="section plan red">
+        <section id="plan" class="section plan red">
             <div class="container">
                 <div class="content">
                     <div class="section-header">
@@ -756,7 +773,7 @@
             </div>
         </section>
 
-        <section class="section bonuses">
+        <section id="bonuses" class="section bonuses">
             <div class="container">
                 <div class="content">
                     <div class="section-header">
@@ -797,7 +814,7 @@
             </div>
         </section>
 
-        <section class="section variants gray">
+        <section id="variants" class="section variants gray">
             <div class="container">
                 <div class="content">
                     <div class="section-header">
@@ -948,7 +965,7 @@
             </div>
         </section>
 
-        <section class="section faq red">
+        <section id="faq" class="section faq red">
             <div class="container">
                 <div class="content">
                     <div class="section-header">
@@ -1109,7 +1126,7 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-logo">
-                <a href="#" class="logo">
+                <a href="/" class="logo">
                     <img src="assets/img/logo_invert.png" alt="" />
                 </a>
                 <div class="social">
